[update] rabbitMQTest 수정

--- a/testProject/msaTest/contract/src/main/resources/application.yml
+++ b/testProject/msaTest/contract/src/main/resources/application.yml
@@ -19,3 +19,6 @@ spring:
     username: guest
     password: guest
 
+mybatis:
+  mapper-locations: classpath:mapper/**/*.xml
+  type-aliases-package: org.example.customer.domain
