--- a/testProject/msaTest/contract/build.gradle
+++ b/testProject/msaTest/contract/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
